jupyterhub/jupyterhub/base/jupyterhub-db-dc.yaml
apiVersion: apps.openshift.io/v1
kind: DeploymentConfig
metadata:
  labels:
    app: jupyterhub
  name: jupyterhub-db
spec:
  replicas: 1
  selector:
    app: jupyterhub
    deploymentconfig: jupyterhub-db
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: jupyterhub
        deploymentconfig: jupyterhub-db
        component.opendatahub.io/name: jupyterhub
        opendatahub.io/component: 'true'
      annotations:
        sidecar.istio.io/inject: "true"
    spec:
      containers:
      - image: registry.redhat.io/rhel8/postgresql-96
        livenessProbe:
          tcpSocket:
            port: 5432
        name: postgresql
        ports:
        - containerPort: 5432
          protocol: TCP
        readinessProbe:
          exec:
            command:
            - /bin/sh
            - -i
            - -c
            - psql -h 127.0.0.1 -U $POSTGRESQL_USER -q -d $POSTGRESQL_DATABASE -c
              'SELECT 1'
        resources:
          limits:
            cpu: "1"
            memory: 1Gi
          requests:
            cpu: "300m"
            memory: 1Gi
        volumeMounts:
        - mountPath: /var/lib/pgsql/data
          name: data
      volumes:
      - name: data
        persistentVolumeClaim:
          claimName: jupyterhub-db
      - configMap:
          defaultMode: 420
          name: jupyterhub-cfg
        name: config
  triggers:
  - type: ConfigChange
