jupyterhub/jupyterhub/base/jupyterhub-dc.yaml
apiVersion: apps.openshift.io/v1
kind: DeploymentConfig
metadata:
  annotations:
      app.openshift.io/connects-to: >-
        [{"apiVersion":"apps.openshift.io/v1","kind":"DeploymentConfig","name":"jupyterhub-db"}]
  labels:
    app: jupyterhub
  name: jupyterhub
spec:
  replicas: 3
  selector:
    app: jupyterhub
    deploymentconfig: jupyterhub
  strategy:
    recreateParams:
      timeoutSeconds: 1200
    type: Recreate
  template:
    metadata:
      annotations:
        alpha.image.policy.openshift.io/resolve-names: '*'
        sidecar.istio.io/inject: "true"
      labels:
        app: jupyterhub
        deploymentconfig: jupyterhub
        component: web
        component.opendatahub.io/name: jupyterhub
        opendatahub.io/component: 'true'
    spec:
      containers:
      - env:
        - name: JUPYTERHUB_SERVICE_NAME
          value: jupyterhub
        - name: JUPYTERHUB_DATABASE_PASSWORD
          valueFrom:
            secretKeyRef:
              name: $(jupyterhub_secret)
              key: POSTGRESQL_PASSWORD
        - name: JUPYTERHUB_DATABASE_HOST
          value: jupyterhub-db
        - name: PROMETHEUS_API_TOKEN
          valueFrom:
            secretKeyRef:
              name: $(jupyterhub_secret)
              key: PROMETHEUS_API_TOKEN
        - name: APP_SCRIPT
          value: /opt/app-root/builder/run
        - name: GPU_MODE
          valueFrom:
            configMapKeyRef:
              name: jupyterhub-cfg
              key: gpu_mode
        - name: JUPYTERHUB_ADMIN_USERS
          valueFrom:
            configMapKeyRef:
              name: jupyterhub-cfg
              key: jupyterhub_admins
        - name: SINGLEUSER_PVC_SIZE
          valueFrom:
            configMapKeyRef:
              name: jupyterhub-cfg
              key: singleuser_pvc_size
        - name: JUPYTERHUB_ADMIN_GROUPS
          valueFrom:
            configMapKeyRef:
              name: $(jupyterhub_groups_config)
              key: admin_groups
        - name: JUPYTERHUB_ALLOWED_GROUPS
          valueFrom:
            configMapKeyRef:
              name: $(jupyterhub_groups_config)
              key: allowed_groups
        - name: JUPYTERHUB_CRYPT_KEY
          valueFrom:
            secretKeyRef:
              name: $(jupyterhub_secret)
              key: JUPYTERHUB_CRYPT_KEY
        - name: JPY_COOKIE_SECRET
          valueFrom:
            secretKeyRef:
              name: $(jupyterhub_secret)
              key: JPY_COOKIE_SECRET
        - name: CONFIGPROXY_AUTH_TOKEN
          valueFrom:
            secretKeyRef:
              name: $(jupyterhub_secret)
              key: CONFIGPROXY_AUTH_TOKEN
        - name: NOTEBOOK_NAMESPACE
          valueFrom:
            configMapKeyRef:
              name: jupyterhub-cfg
              key: notebook_destination
        - name: TRAEFIK_API_USERNAME
          valueFrom:
            secretKeyRef:
              name: $(traefik_credentials_secret)
              key: TRAEFIK_API_USERNAME
        - name: TRAEFIK_API_PASSWORD
          valueFrom:
            secretKeyRef:
              name: $(traefik_credentials_secret)
              key: TRAEFIK_API_PASSWORD
        image: quay.io/maulikjs/jupyterhub-img:v3.5.3-toml-cm-parameterized
        imagePullPolicy: "Always"
        name: jupyterhub
        ports:
        - containerPort: 8080
          protocol: TCP
        resources:
          limits:
            cpu: "1"
            memory: 1Gi
          requests:
            cpu: "1"
            memory: 1Gi
        volumeMounts:
        - mountPath: /opt/app-root/configs
          name: config
        readinessProbe:
            tcpSocket:
              port: 8081
            initialDelaySeconds: 15
            periodSeconds: 10
      - name: jupyterhub-ha-sidecar
        image: gcr.io/google_containers/leader-elector:0.5
        args:
        - --election=jupyterhub-ha-election
        - --election-namespace=$(namespace)
        - --http=0.0.0.0:4040
      serviceAccountName: jupyterhub-hub
      imagePullSecrets:
      - name: addon-managed-odh-pullsecret
      volumes:
      - configMap:
          defaultMode: 420
          name: jupyterhub-cfg
        name: config
  triggers:
  - type: ConfigChange
