jupyterhub/jupyterhub/base/jupyterhub-db-probe-svc.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    prometheus.io/scheme: http
    prometheus.io/scrape: 'true'
  labels:
    app: jupyterhub-db-probe
  name: jupyterhub-db-probe
  namespace: redhat-ods-applications
spec:
  ports:
  - name: metrics
    port: 8080
    targetPort: metrics
  selector:
    deployment: jupyterhub-db-probe
