jupyterhub/jupyterhub/base/traefik-service.yaml
kind: Service
apiVersion: v1
metadata:
  name: traefik-proxy
spec:
  selector:
    k8s-app: traefik-proxy
  ports:
    - name: admin
      protocol: TCP
      port: 8099
      targetPort: 8099
    - name: api
      protocol: TCP
      port: 8080
      targetPort: 8080
    - name: healthz
      protocol: TCP
      port: 8081
      targetPort: 8081
  type: ClusterIP
