jupyterhub/jupyterhub/base/traefik-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: jupyterhub
  name: jupyterhub
spec:
  host: ''
  port:
    targetPort: admin
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
  to:
    kind: Service
    name: traefik-proxy
    weight: 100
